fix bug in jsBrowserify task so email submit is working and append index.html with calculator

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
       <label for="email">Enter your email:</label>
       <input id="email" type="text">
       <button type="submit">Submit</button>
-    </form>    
+    </form>
     <ul id="solution"></ul>
+    <form id="calculator-form">
+      <label for="number1">Enter a number:</label>
+      <input id="number1" type="number">
+      <label for="number2">Enter another number:</label>
+      <input id="number2" type="number"><br>
+      <button id="add" type="button" name="add">Add</button>
+      <button id="subtract" type="button" name="subtract">Subtract</button>
+      <button id="divide" type="button" name="divide">Divide</button>
+      <button id="multiply" type="button" name="multiply">Multiply</button>
+    </form>
   </body>
 </html>
