delete extra closing parentheses so that calculator function works

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
       <button id="divide" type="button" name="divide">Divide</button>
       <button id="multiply" type="button" name="multiply">Multiply</button>
     </form>
+    <div id="solution2"></div>
   </body>
 </html>
